kubernetes/todo-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-backend
  name: todo-backend
  namespace: todos
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: todo-backend
  type: ClusterIP
