kubernetes/todo-kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend
spec:
  ingressClassName: nginx
  rules:
  - host: todoapp.backend.local
    http:
      paths:
      - backend:
          service:
            name: todo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
